--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-"<!DOCTYPE html><html><head><title>Left Side Mentality</title></head><body><h1>Welcome to Left Side Mentality</h1></body></html>" 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Left Side Mentality</title>    
+    </head>
+<body>
+    <h1>Welcome to Left Side Mentality</h1>
+</body>
+</html>
