create homepage hero section

--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Left Side Mentality</title>    
-    </head>
-<body>
-    <h1>Welcome to Left Side Mentality</h1>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Left Side Mentality</title>
+    <link href="style.css" rel="stylesheet">   
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> 
+</head>
+
+<body class="bg-black text-white">
+    <section class="min-h-screen flex flex-col justify-center items-center bg-cover bg-center" style="background-image: url('https://source.unsplash.com/1600x900/?padel,sports')">
+        <div class="bg-black bg-opacity-50 p-10 rounded-xl text-center">
+            <h1 class="text-5xl font-bold mb-4">Left Side Mentality</h1>
+            <p class="text-xl mb-6">Creative visuals. Competitive mindset.</p>
+            <a href="#work" class="bg-white text-black font-semibold px-6 py-3 rounded-full hover:bg-gray-300 transition">View My Work</a>
+        </div>
+    </section>
 </body>
+
 </html>
