add about and portfolio sections

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="bg-black text-white">
+
     <section class="min-h-screen flex flex-col justify-center items-center bg-cover bg-center" style="background-image: url('https://source.unsplash.com/1600x900/?padel,sports')">
         <div class="bg-black bg-opacity-50 p-10 rounded-xl text-center">
             <h1 class="text-5xl font-bold mb-4">Left Side Mentality</h1>
@@ -17,6 +18,42 @@
             <a href="#work" class="bg-white text-black font-semibold px-6 py-3 rounded-full hover:bg-gray-300 transition">View My Work</a>
         </div>
     </section>
+
+       
+    <section class="bg-gray-900 py-20 text-center" id="about">
+        <h2 class="text-4x1 font-bold mb-6">About Left Side Mentality</h2>
+        <p class="max-w-2x1 mx-auto text-lg">
+            Left Side Mentality is all about capturing energy, focus, and intensity — whether you're on the padel court, in the surf, or on the grind. We create visuals that match your mindset.
+        </p>
+    </section>
+
+    <section class="bg-gray-800 py-20 text-center text-white" id="work">
+        <h2 class="text-4xl font-bold mb-10">My Work</h2>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 px-6 max-w-6xl mx-auto">
+
+            <div class="bg-gray-700 rounded-xl p-4 shadow-lg">
+                <video controls class="rounded-xl w-full">
+                    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <p class="mt-2 text-sm">Padel highlight reel for a client</p>
+            </div>
+
+            <div class="bg-gray-700 rounded-xl p-4 shadow-lg">
+                <img src="https://source.unsplash.com/400x300/?surf" class="rounded-xl w-full" />
+                <p class="mt-2 text-sm">Surf photography from Muizenberg</p>
+            </div>
+
+            <div class="bg-gray-700 rounded-xl p-4 shadow-lg">
+                <img src="https://source.unsplash.com/400x300/?camera,creative" class="rounded-xl w-full" />
+                <p class="mt-2 text-sm">Behind the scenes from a shoot</p>
+            </div>
+
+        </div>
+    </section>
+
+
 </body>
 
 </html>
